[tool.poetry]
name = "yandex-bi-file-uploader-api-yc"
version = "0.115.0"
description = ""
authors = ["Andrey Snytin <asnytin@yandex-team.ru>", "Aleksei Konstantinov konstasa@yandex-team.ru"]
packages = [{include = "app_yc_file_uploader_api"}]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
aiobotocore = ">=2.4.2"
aiogoogle = ">=5.2.0"
aiohttp = ">=3.8.1"
arq = ">=0.25.0"
attrs = ">=22.2.0"
docker = ">=6.0.1"
marshmallow = ">=3.19.0"
marshmallow-enum = ">=1.5.1"
python = ">=3.10, <3.12"
sentry-sdk = ">=1.15.0"
yandex-bi-configs = {path = "../../lib/bi_configs"}
yandex-bi-core = {path = "../../lib/bi_core"}
yandex-bi-file-uploader-api-lib = {path = "../../lib/bi_file_uploader_api_lib"}
yandex-bi-api-commons-ya-cloud = {path = "../../lib/bi_api_commons_ya_cloud"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []

[tool.ruff]
line-length = 140
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]

[tool.black]
line-length = 140
target-version = ['py310']

[datalens_ci]
skip_test = true

[[tool.poetry.source]]
name = "ya"
url = "https://pypi.yandex-team.ru/simple/"
priority = "default"
