[tool.poetry]
name = "yandex-bi-file-uploader-worker-yc"
version = "0.140.0"
description = ""
authors = ["Andrey Snytin <asnytin@yandex-team.ru>", "Aleksei Konstantinov konstasa@yandex-team.ru"]
packages = [{include = "app_yc_file_uploader_worker"}]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
aiohttp = ">=3.8.1"
attrs = ">=22.2.0"
yandex-bi-core = {path = "../../mainrepo/lib/bi_core"}
yandex-bi-file-uploader-worker-lib = {path = "../../mainrepo/lib/bi_file_uploader_worker_lib"}
bi-task-processor = {path = "../../mainrepo/lib/bi_task_processor"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []

[tool.ruff]
line-length = 140
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]

[tool.black]
line-length = 140
target-version = ['py310']

[datalens_ci]
skip_test = true

[[tool.poetry.source]]
name = "ya"
url = "https://pypi.yandex-team.ru/simple/"
priority = "default"

[tool.poetry.scripts]
file-uploader-worker = "app_yc_file_uploader_worker.app:run_standalone_worker"
file-uploader-worker-health-check = "app_yc_file_uploader_worker.app:run_health_check"
