
[tool.poetry]
name = "anyascii"
version = "0.0.1"
description = ""
authors = ["Valeriia Bulanova <bulanovavv@yandex-team.ru>"]
packages = [{include = "anyascii"}]
license = "MIT"


[tool.poetry.dependencies]
python = ">=3.10, <3.12"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []

[tool.ruff]
line-length = 140
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]

[tool.black]
line-length = 140
target-version = ['py310']



[datalens_ci]
skip_test = true
