
[tool.poetry]
name = "yandex-bi-api-client"
version = "0.0.1"
description = ""
authors = ["Grigory Statsenko <gstatsenko@yandex-team.ru>"]
packages = [{include = "bi_api_client"}]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
aiohttp = ">=3.8.1"
attrs = ">=22.2.0"
marshmallow = ">=3.19.0"
marshmallow-enum = ">=1.5.1"
marshmallow-oneofschema = ">=3.0.1"
python = ">=3.10, <3.12"
requests = ">=2.28.2"
yandex-bi-constants = {path = "../../lib/bi_constants"}
yandex-bi-model-tools = {path = "../../lib/bi_model_tools"}

[tool.poetry.group.tests.dependencies]
pytest = ">=7.2.2"
pytest-asyncio = ">=0.20.3"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []

[tool.ruff]
line-length = 140
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]

[tool.black]
line-length = 140
target-version = ['py310']



[datalens_ci]
skip_test = true
