
[tool.poetry]
name = "yandex-bi-api-commons"
version = "0.0.1"
description = ""
authors = ["Aleksandr Ushakov <alex-ushakov@yandex-team.ru>"]
packages = [{include = "bi_api_commons"}]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
aiohttp = ">=3.8.1"
attrs = ">=22.2.0"
marshmallow = ">=3.19.0"
opentracing = ">=2.4.0"
pyjwt = ">=2.3.0"
python = ">=3.10, <3.12"
raven = ">=6.10.0"
sentry-sdk = ">=1.15.0"
yandex-bi-app-tools = {path = "../../lib/bi_app_tools"}
yandex-bi-cloud-integration = {path = "../../lib/bi_cloud_integration"}
yandex-bi-constants = {path = "../../lib/bi_constants"}
yandex-bi-utils = {path = "../../lib/bi_utils"}
statcommons = {path = "../../lib/statcommons"}

[tool.poetry.group.tests.dependencies]
pytest = ">=7.2.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []

[tool.ruff]
line-length = 140
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]

[tool.black]
line-length = 140
target-version = ['py310']



[datalens_ci]
skip_test = true
